--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/voyager63/GraduationProject#readme",
   "dependencies": {
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mysql": "^2.18.1"
   }
 }
