--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
